2010-04-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use a space for symlink-resolution scratch.

	* rcsedit.c (naturalize): Rename from `resolve_symlink';
	define unconditionally; bifurcate internals for the case of
	!HAVE_READLINK; take out-arg `symbolicp'; set to indicate
	symlink resolution occurred; use space for local allocation.
	(rcswriteopen): Use `naturalize';
	do failed-symlink-check unconditionally.

2010-04-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use a space for `expandline' scratch.

	* base.h (manifestation): Remove member `keyval'; add `lparts'.
	* b-kwxout.c: #include "b-divvy.h".
	(LPARTS): New #define.
	(ENSURE_LPARTS): New macro.
	(expandline): Create and use space `LPARTS' for scanning scratch.

2010-04-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use spaces for "ci -k" support.

	* rcskeep.c (sorry): New static func.
	(badly_terminated): Use `sorry'; also, take `savep', if set,
	finish and then brush off the partially constructed string.
	(get0val): Save directly to `SINGLE'; return `char *';
	don't take `struct buf *'; instead take `bool savep'.
	(keepid): Return `char *'; don't take `struct buf *'.
	(getval): Return `char *'; don't take `struct buf *';
	instead take `bool savep'.
	(keepdate): Use `SHARED' temporarily for date and time strings.
	(checknum): Incorporate into unique caller.
	(keeprev): Return `char *'; set `PREV (rev)' directly.
	(getoldkeys): Don't keep local `struct buf' objects;
	use strings saved in `SINGLE' and `PREV (foo)' directly.

2010-04-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Re{name,base} abstraction from `ftalloc' to `FALLOC'.

	* b-divvy.h (FALLOC): New macro.
	* rcs.c: #include "b-divvy.h".
	(doaccess): Use `FALLOC'.
	* rcsedit.c (addlock, addsymbol): Likewise.
	* rcslex.c (lookup): Likewise.
	* rcsrev.c: #include "b-divvy.h".
	(store1): Use `FALLOC'.
	* rcssyn.c: #include "b-divvy.h".
	(getadmin, getdelta): Use `FALLOC'.
	* rcsutil.c (ftestalloc): Delete func.